Forsøk på å få test til å fungere